applications/postgresql/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: postgresql
  labels:
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/part-of: infrastructure
